--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,14 +25,19 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+    #l'option --logger permet de generer le fichier pour les tests
+      run: dotnet test --no-build --verbosity normal --logger "trx;LogFileName=TestResults
     - name: Publish
       run: dotnet publish --configuration Release --output ./publish
+
+      #add un upload for build artifacts
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Build Artifacts
         path: ./publish
+
+        #should add un upload for tests success
     - name: Upload tests results
       uses: actions/upload-artifact@v3
       with:
